--- a/testshop/shop/templates/list.html
+++ b/testshop/shop/templates/list.html
@@ -14,6 +14,6 @@
     </div>
     {% endfor %}
 {% else %}
-    <a href="{% url 'login' %}">войти</a>
+    <a href="{% url 'login_form' %}">войти</a>
 {% endif %}
 {%endblock%}
