--- a/testshop/userlogin/templates/login.html
+++ b/testshop/userlogin/templates/login.html
@@ -12,5 +12,6 @@
       <input max='35' name='password' placeholder='password' type='password' value=''>
       <button class="btn btn-success" type='submit'>Login</button>
     </form>
+    <a href="{% url 'registration' %}">Регистрация</a>
 {% endif %}
 {% endblock %}
